created temporary navbar and cards for tasks

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+/* Fonts */
+
+@import url("https://fonts.googleapis.com/css2?family=Rokkitt:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rokkitt:ital,wght@0,100..900;1,100..900&display=swap");
+
+/* Tailwind */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
